--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,8 @@
 @include md-register-theme("default", (
         primary: #3fffbe, // The primary color of your brand
         accent: #1a11e8 // The secondary color of your brand
+        //primary: md-get-palette-color(purple, 500),
+        //accent: md-get-palette-color(teal, 200)
 ));
 @import "~vue-material/dist/theme/all";
 .logo{
